--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
   margin: 0;
 }
 
+::selection {
+  color: #f0284d;
+}
+
 /* Why Choose Us Title */
 #title {
   text-align: center;
@@ -31,7 +35,7 @@
 .shared-section::before {
   content: "";
   position: absolute;
-  bottom: 20px;
+  bottom: 30px;
   left: 0;
   width: 0;
   height: 0;
@@ -96,27 +100,24 @@
 /* The content of the shared section before element initially hidden  */
 .sectionContent {
   position: absolute;
-  width: 0;
-  height: 0%;
-  top: 30%;
-  display: none;
+  width: 100%;
+  bottom: 35%; /* Initially positioned at the bottom */
+  display: flex;
   flex-direction: column;
+  color: white;
   justify-content: center;
   align-items: center;
-  color: white;
   text-align: center;
-  transition: all 0.7s ease-in-out 0.7s; /* Adjusted transition properties */
+  opacity: 0; /* Initially hidden */
+  pointer-events: none; /* Disable pointer events to prevent interaction when hidden */
+  transition: opacity 0.7s ease, bottom 0.7s ease, height 0.7s ease; /* Transition bottom position and height */
+  transition-delay: 0.6s;
 }
 
-/*The content of the shared section before element Wil visible after hover  */
 .shared-section:hover .sectionContent {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 40%;
-  margin: auto;
-  transition: all 0.7s ease-in-out; /* Removed transition-delay */
+  opacity: 1; /* Make visible on hover */
+  pointer-events: auto; /* Enable pointer events when visible */
+  bottom: 40%; /* Adjust bottom position on hover */
 }
 
 /* If shared section is hovered change the styledTitle color */
